--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -9,6 +9,7 @@
 		"@aws-sdk/client-sfn": "^3.906.0",
 		"@aws-sdk/client-sqs": "^3.896.0",
 		"@aws-sdk/lib-dynamodb": "^3.895.0",
+		"handlebars": "^4.7.8",
 		"pino": "^10.0.0",
 		"pino-pretty": "^13.1.1",
 		"uuidv7": "^1.0.2"
