--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,8 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    needs:
+      - validate
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
@@ -40,7 +42,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version-file: .nvmrc
-     
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -52,6 +54,6 @@ jobs:
 
       - name: Set Secrets
         run: |
-            npm run sst -- secret set JwtSecret ${{ secrets.JWT_SECRET }}
+          npm run sst -- secret set JwtSecret ${{ secrets.JWT_SECRET }}
       - name: Deploy app
         run: npm run deploy
