--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,6 +52,11 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
+      - name: Configure .env.json
+        run: |
+          echo "${{ secrets.DOT_ENV}}" > .env.json
+          base64 -d .env.json > .env.json
+
       - name: Set Secrets
         run: |
           npm run sst -- secret set JwtSecret ${{ secrets.JWT_SECRET }}
