--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,6 +52,9 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
+      - name: Build Dependencies
+        run: npm run build:deps
+
       - name: Configure .env.json
         run: |
           echo "${{ secrets.DOT_ENV}}" > .env.txt
