--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -15,10 +15,13 @@
 	"dependencies": {
 		"@grapesjs/react": "^1.0.0",
 		"@hookform/resolvers": "^5.2.2",
-		"@monaco-editor/react": "^4.6.0",
 		"@sendra/shared": "1.0.0",
 		"@svgr/webpack": "^8.1.0",
 		"@tippyjs/react": "^4.2.6",
+		"@tiptap/extension-link": "^3.8.0",
+		"@tiptap/extension-underline": "^3.8.0",
+		"@tiptap/react": "^3.8.0",
+		"@tiptap/starter-kit": "^3.8.0",
 		"@uiball/loaders": "^1.3.1",
 		"classnames": "^2.5.1",
 		"dayjs": "^1.11.12",
@@ -50,7 +53,7 @@
 		"@types/node": "20.14.11",
 		"@types/nprogress": "^0.2.3",
 		"@types/react": "18.3.3",
-		"@types/react-syntax-highlighter": "^15.5.13",
+		"@types/react-dom": "18.3.3",
 		"@types/react-window": "^1",
 		"autoprefixer": "^10.4.19",
 		"postcss": "^8.4.39",
