--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -25,30 +25,29 @@
 		"@sendra/shared": "1.0.0",
 		"@tailwindcss/postcss": "^4.1.16",
 		"@tippyjs/react": "^4.2.6",
-		"@tiptap/extension-link": "^3.8.0",
-		"@tiptap/extension-underline": "^3.8.0",
-		"@tiptap/react": "^3.8.0",
-		"@tiptap/starter-kit": "^3.8.0",
+		"@tiptap/extension-link": "^3.10.1",
+		"@tiptap/extension-underline": "^3.10.1",
+		"@tiptap/react": "^3.10.1",
+		"@tiptap/starter-kit": "^3.10.1",
 		"@uiball/loaders": "^1.3.1",
 		"dayjs": "^1.11.12",
 		"dompurify": "^3.2.6",
-		"framer-motion": "^11.3.7",
+		"framer-motion": "^12.23.24",
 		"grapesjs": "^0.22.13",
 		"grapesjs-mjml": "^1.0.7",
-		"hono": "^4.10.2",
-		"jotai": "2.9.0",
-		"lucide-react": "^0.408.0",
+		"jotai": "^2.15.0",
+		"lucide-react": "^0.552.0",
 		"mjml-browser": "^4.16.1",
 		"next": "^16.0.1",
 		"nprogress": "^0.2.0",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
-		"react-hook-form": "^7.52.1",
+		"react-hook-form": "^7.66.0",
 		"react-window": "^1.8.10",
 		"recharts": "^2.12.7",
 		"sharp": "^0.34.4",
-		"sonner": "^1.5.0",
-		"swr": "2.2.5",
+		"sonner": "^2.0.7",
+		"swr": "^2.3.6",
 		"tailwind-scrollbar": "^4.0.2",
 		"zod": "^4.1.11"
 	},
@@ -70,7 +69,7 @@
 		"@vitejs/plugin-react": "^4.3.0",
 		"autoprefixer": "^10.4.19",
 		"jest-axe": "^9.0.0",
-		"jsdom": "^25.0.0",
+		"jsdom": "^27.1.0",
 		"msw": "^2.6.0",
 		"postcss": "^8.4.39",
 		"tailwindcss": "^4.1.16",
