--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,3 +6,18 @@ aux_links:
   Home: /
   API Spec: /api-spec.html
   GitHub: https://github.com/Service-Unit-469/Sendra
+
+gh_edit_link: true
+gh_edit_link_text: "Edit this page on GitHub."
+gh_edit_repository: "https://github.com/Service-Unit-469/Sendra"
+gh_edit_branch: main
+gh_edit_source: docs
+gh_edit_view_mode: tree
+
+callouts:
+  warning:
+    title: Warning
+    color: red
+  note:
+    title: Note
+    color: blue
